added key pressed, was pressed and was released

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <canvas width="320" height="240">Votre navigateur doit supporter canvas pour jouer</canvas>
     <script src="./js/yume/YumeWindow.js"></script>
-    <script src="./js/yume/YumeSong.js"></script>
+    <script src="./js/yume/YumeAudio.js"></script>
     <script src="./js/yume/YumeImage.js"></script>
     <script src="./js/yume/YumeAnimation.js"></script>
     <script src="./js/main.js"></script>
